# libcall-ui

./: .gitlab-ci.yml  NEWS  README.md  config.h.in  libcall-ui.doap  meson.build
doc/: build-howto.md  libcall-ui.toml.in  meson.build
examples/: call-ui-demo.c  cui-demo-call.c  cui-demo-window.c  cui-demo-window.h  cui-demo-window.ui  meson.build
po/: LINGUAS  POTFILES.in  ar.po  bg.po  en_GB.po  fa.po  hr.po  ht.po  nl.po  ro.po  ru.po  uk.po  uz.po
src/: call-ui.gresources.xml  call-ui.h  cui-call-display.c  cui-call-display.h  cui-call-display.ui  cui-call.c  cui-call.h  cui-dialpad.c  cui-dialpad.h  cui-dialpad.ui  cui-encryption-indicator-priv.h  cui-encryption-indicator.c  cui-encryption-indicator.ui  cui-keypad-button-private.h  cui-keypad-button.c  cui-keypad-button.ui  cui-keypad.c  cui-keypad.h  cui-keypad.ui  cui-main.c  meson.build  style.css
tests/: dummy-call.c  meson.build  test-dialpad.c  test-keypad.c
